[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "membase"
version = "0.0.1"
description = "A fast, ergonomic workspace in the cloud for AI agents — backed by Hugging Face Storage Buckets."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "James A. Rolfsen", email = "james@think.dev"},
]
maintainers = [
    {name = "James A. Rolfsen", email = "james@think.dev"},
]
keywords = [
    "ai",
    "agents",
    "workspace",
    "huggingface",
    "cloud-storage",
    "filesystem",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/jrolf/membase"
Repository = "https://github.com/jrolf/membase"
Issues = "https://github.com/jrolf/membase/issues"
Changelog = "https://github.com/jrolf/membase/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
